--- a/src/Views/PopupRunningStatus.axaml
+++ b/src/Views/PopupRunningStatus.axaml
@@ -8,7 +8,7 @@
              x:Class="SourceGit.Views.PopupRunningStatus"
              x:Name="me">
   <StackPanel Orientation="Vertical">
-    <Rectangle Height="1" Margin="-8,0" HorizontalAlignment="Stretch" Fill="{DynamicResource Brush.Border1}" />
+    <Rectangle Height="1" HorizontalAlignment="Stretch" Fill="{DynamicResource Brush.Border1}" />
     
     <StackPanel Orientation="Horizontal" Margin="0,8">
       <ContentPresenter x:Name="icon" Width="12" Height="12"/>
