--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -26,6 +26,11 @@
     <Setter Property="ExtendClientAreaToDecorationsHint" Value="True"/>
     <Setter Property="SystemDecorations" Value="Full"/>
     <Setter Property="Padding" Value="0"/>
+
+    <Style.Resources>
+      <SolidColorBrush x:Key="SystemControlErrorTextForegroundBrush" Color="Red"/>
+      <SolidColorBrush x:Key="SystemErrorTextColor" Color="Red"/>
+    </Style.Resources>
   </Style>
 
   <Style Selector="Window[WindowState=Maximized]">
@@ -1293,5 +1298,23 @@
   </Style>
   <Style Selector="TreeDataGridExpanderCell[IsExpanded=False] Path.folder_icon">
     <Setter Property="Data" Value="{StaticResource Icons.Folder.Fill}"/>
+  </Style>
+
+  <Style Selector="NumericUpDown">
+    <Style Selector="^ /template/ ButtonSpinner#PART_Spinner">
+      <Setter Property="MinHeight" Value="0"/>
+      <Setter Property="Height" Value="28"/>
+    </Style>
+    <Style Selector="^ /template/ TextBox#PART_TextBox">
+      <Setter Property="MinHeight" Value="0"/>
+      <Setter Property="Height" Value="28"/>
+      <Setter Property="VerticalContentAlignment" Value="Center"/>
+    </Style>
+    <Style Selector="^:focus-within /template/ ButtonSpinner#PART_Spinner">
+      <Setter Property="BorderBrush" Value="{DynamicResource Brush.Accent}"/>
+    </Style>
+    <Style Selector="^ /template/ TextBox#PART_TextBox /template/ Border#PART_BorderElement">
+      <Setter Property="IsVisible" Value="False"/>
+    </Style>
   </Style>
 </Styles>
