fix: artifacts when using rounded corner and clip to bounds with Window border on Linux

--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -120,14 +120,15 @@
                     Background="{DynamicResource Brush.Window}"
                     BorderBrush="{DynamicResource Brush.Border0}"
                     BorderThickness="1"
-                    CornerRadius="8"
-                    ClipToBounds="True">
+                    CornerRadius="8">
               <VisualLayerManager>
-                <ContentPresenter Name="PART_ContentPresenter"
-                                  ContentTemplate="{TemplateBinding ContentTemplate}"
-                                  Content="{TemplateBinding Content}"
-                                  HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                  VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                <Border CornerRadius="8" ClipToBounds="True">
+                  <ContentPresenter Name="PART_ContentPresenter"
+                                    ContentTemplate="{TemplateBinding ContentTemplate}"
+                                    Content="{TemplateBinding Content}"
+                                    HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                    VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                </Border>
               </VisualLayerManager>
             </Border>
           </Grid>
