--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -72,6 +72,10 @@
           <Button Classes="icon_button" Width="32" Margin="8,0,0,0" Click="OpenGitFlowMenu" ToolTip.Tip="{DynamicResource Text.GitFlow}">
             <Path Width="14" Height="14" Data="{StaticResource Icons.Flow}"/>
           </Button>
+
+          <Button Classes="icon_button" Width="32" Margin="8,0,0,0" Click="OpenGitLFSMenu" ToolTip.Tip="{DynamicResource Text.GitLFS}">
+            <Path Width="14" Height="14" Data="{StaticResource Icons.LFS}"/>
+          </Button>
         </StackPanel>
 
         <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,4,0">          
