--- a/src/Views/Launcher.axaml
+++ b/src/Views/Launcher.axaml
@@ -50,7 +50,7 @@
           <MenuFlyout Placement="BottomEdgeAlignedLeft" VerticalOffset="-8">
             <MenuItem Header="{DynamicResource Text.Preference}" Command="{x:Static s:App.OpenPreferenceCommand}" InputGesture="Ctrl+Shift+P">
               <MenuItem.Icon>
-                <Path Width="14" Height="14" Data="{StaticResource Icons.Settings2}"/>
+                <Path Width="14" Height="14" Data="{StaticResource Icons.Settings}"/>
               </MenuItem.Icon>
             </MenuItem>
             <MenuItem Header="{DynamicResource Text.Hotkeys}" Command="{x:Static s:App.OpenHotkeysCommand}">
