--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -98,7 +98,7 @@
           </Button>
 
           <Button Classes="icon_button" Width="32" Command="{Binding OpenConfigure}" ToolTip.Tip="{DynamicResource Text.Repository.Configure}">
-            <Path Width="15" Height="15" Data="{StaticResource Icons.Settings1}"/>
+            <Path Width="15" Height="15" Data="{StaticResource Icons.Settings}"/>
           </Button>
         </StackPanel>
       </Grid>
