--- a/src/Views/PruneRemote.axaml
+++ b/src/Views/PruneRemote.axaml
@@ -9,9 +9,9 @@
   <StackPanel Orientation="Vertical" Margin="8,0">
     <TextBlock FontSize="18"
                Classes="bold"
-               Text="{DynamicResource Text.RemoteCM.Prune}"/>
+               Text="{DynamicResource Text.PruneRemote}"/>
     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,16,0,0">
-      <TextBlock Text="{DynamicResource Text.RemoteCM.Prune.Target}"/>
+      <TextBlock Text="{DynamicResource Text.PruneRemote.Target}"/>
       <Path Width="14" Height="14" Margin="8,6,8,0" Data="{StaticResource Icons.Remote}"/>
       <TextBlock Text="{Binding Remote.Name}"/>
     </StackPanel>
